Decreased the width of the splitte in sidebar

--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -17,3 +17,7 @@
 #sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header {
   display: none;
 }
+
+#sidebar-box + #sidebar-splitter {
+  width: 1px !important;	
+}
